# grasp-research

./: .gitignore  README.md  sync.sh
src/anygrasp_ros/: CMakeLists.txt  package.xml
src/anygrasp_ros/scripts/: anygrasp_ros.py  anygrasp_ros_handineye.py  anygrasp_ros_node_merge.py  brain.py  brain_handineye.py  demo.py  demo_2d.py  demo_3d.py  grasppose_generating.py  grasppose_generating_filtered.py  mask_overlay.py  ros_masked.py  save_depth.py
src/anygrasp_ros/scripts/lang_segment_anything/: semantic_grasp_analyzer.py  vision_pipeline.py
src/foundationpose_ros/: CMakeLists.txt  install_foundationpose.txt  package.xml
src/foundationpose_ros/docker/: run_container.sh
src/foundationpose_ros/scripts/: foundationpose_node.py
src/ros_ur3/: README.md
src/ros_ur3/ur3_dual_control/: CMakeLists.txt
src/ros_ur3/ur_control/config/: ur_controllers.yaml
src/ros_ur3/ur_control/launch/: ur3e_dual_bringup.launch  ur_controllers_dual.launch
src/ros_ur3/ur_control/scripts/: .TimeRecord  ai_planner.py  both_arms_reachable.csv  calibrate_pixel_offset.py  camera_info.txt  coordinate_transform.py  dual_arm_sync_control.py  error_compensation_data.json  frames.gv  grasp_pose_predict.py  handover.py  object_detection.py  pixel_offset_calibration.json  reachability_map_leftarm.csv  reachability_map_rightarm.csv  reachability_scan.py  robot2.urdf  save_image_for_anygrasp.py  show_camera_img.py  simple_grasp_controller.py  simple_grasp_controller_handineye.py  simple_move_test.py  sync_control_dual.py  synchronous_moveit_to_gazebo.py  test.py  tf_coordinate_transform.py  transform_grasp_pose.py  visualize_3d_point.py
(+48 files in other folders)
